--- a/src/views/study.html
+++ b/src/views/study.html
@@ -53,6 +53,9 @@
         </header>
         <main>
 
+            {% if  proffys == "" %}
+                <p class="no-results">Nenhum professor encontrado com a sua pesquisa</p>
+            {% else %}
             {% for proffy in proffys %}
                 <article class="teacher-item">
                 <header>
@@ -75,7 +78,9 @@
                     </a>
                 </footer>
                 </article>
-            {%endfor%}
+            {% endfor %}
+            {% endif %}
+
         </main>
     </div>
 </body>
